--- a/locales/ja.json
+++ b/locales/ja.json
@@ -91,7 +91,7 @@
   "LABEL_SETTINGS_TAB_SHORTCUTS_GLOBAL": "グローバル",
   "LABEL_SETTINGS_TAB_SHORTCUTS_LOCAL": "ローカル",
   "LABEL_SETTINGS_TAB_SHORTCUTS_PRESS_ANY_KEYS": "何かキーを押してください",
-  "LABEL_SETTINGS_TAB_SHORTCUTS_VOLUME_MEDIA_KEYS": "メディアキーの音量調節はアプリの音量のみコントロール",
+  "LABEL_SETTINGS_TAB_SHORTCUTS_VOLUME_MEDIA_KEYS": "メディアキーの音量調節ではアプリの音量のみコントロール",
   "LABEL_SHUTDOWN": "シャットダウン",
   "LYRICS": "歌詞",
   "MEDIA_CONTROL_ENABLE_DISABLE": "ショートカットメディアコントロールを有効/無効",
