--- a/locales/ja.json
+++ b/locales/ja.json
@@ -61,7 +61,7 @@
   "LABEL_SETTINGS_TAB_GENERAL_SHINY_TRAY": "簡易トレイコントロール (macOS のみ)",
   "LABEL_SETTINGS_TAB_GENERAL_SHINY_TRAY_SONG_TITLE_ROLLABLE": "トレイで曲名をスクロールで表示",
   "LABEL_SETTINGS_TAB_GENERAL_SHOW_NOTIFICATIONS": "通知を表示",
-  "LABEL_SETTINGS_TAB_GENERAL_START_MINIMIZED": "最小化で開始",
+  "LABEL_SETTINGS_TAB_GENERAL_START_MINIMIZED": "最小化した状態で起動",
   "LABEL_SETTINGS_TAB_GENERAL_START_ON_BOOT": "スタートアップ時に起動 (Mac/Win)",
   "LABEL_SETTINGS_TAB_INTEGRATION": "統合",
   "LABEL_SETTINGS_TAB_INTEGRATION_WINDOWS10_MEDIA_SERVICE": "Windows 10 メディアサービスを有効",
